{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 84,
  "lineage": "c7005f68-93d6-6d3a-b478-bddd02ae8c1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dabbba77e54093ff",
            "route_table_id": "rtb-0b061a63c44083411",
            "subnet_id": "subnet-0fdf6a2992f7f70b5"
          },
          "dependencies": [
            "module.list_subnet.aws_subnet.private_1",
            "module.list_subnet.aws_subnet.public_1",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.natgw.aws_eip.my_eip",
            "module.natgw.aws_nat_gateway.my_natgw",
            "module.natgw.aws_route_table.private_rt",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d5005f478cf83c5",
            "route_table_id": "rtb-0b061a63c44083411",
            "subnet_id": "subnet-01a2d4862156e255a"
          },
          "dependencies": [
            "module.list_subnet.aws_subnet.private_2",
            "module.list_subnet.aws_subnet.public_1",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.natgw.aws_eip.my_eip",
            "module.natgw.aws_nat_gateway.my_natgw",
            "module.natgw.aws_route_table.private_rt",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebd1b60794333944",
            "route_table_id": "rtb-092cc5e098cfeddce",
            "subnet_id": "subnet-00c1845c3a6fb3ba8"
          },
          "dependencies": [
            "module.list_subnet.aws_subnet.public_1",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.vpc.aws_internet_gateway.my_itgw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b47e4d274ad62590",
            "route_table_id": "rtb-092cc5e098cfeddce",
            "subnet_id": "subnet-0700f2d65ce7519f0"
          },
          "dependencies": [
            "module.list_subnet.aws_subnet.public_2",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.vpc.aws_internet_gateway.my_itgw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f5a0b78d6089704",
            "arn": "arn:aws:ec2:us-east-1:590184092117:instance/i-094db4e48850d4107",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094db4e48850d4107",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Giltab-us",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f3a52165ab83487",
            "private_dns": "ip-10-31-2-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.31.2.14",
            "public_dns": "ec2-23-22-40-30.compute-1.amazonaws.com",
            "public_ip": "23.22.40.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f79f2e076c974e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0700f2d65ce7519f0",
            "tags": {
              "Name": "mini-projet-vpc"
            },
            "tags_all": {
              "Name": "mini-projet-vpc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0baceae751faebfc4"
            ]
          },
          "dependencies": [
            "module.ec2_public.data.aws_ami.this",
            "module.list_subnet.aws_subnet.public_2",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.sg.aws_security_group.allow_http_https_ssh",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.list_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "module.list_subnet.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:subnet/subnet-0fdf6a2992f7f70b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.31.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdf6a2992f7f70b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184092117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "dependencies": [
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.list_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "module.list_subnet.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:subnet/subnet-01a2d4862156e255a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.31.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a2d4862156e255a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184092117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "dependencies": [
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.list_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "module.list_subnet.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:subnet/subnet-00c1845c3a6fb3ba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c1845c3a6fb3ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184092117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "dependencies": [
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.list_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "module.list_subnet.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:subnet/subnet-0700f2d65ce7519f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0700f2d65ce7519f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184092117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "dependencies": [
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0096ceeef8520c570",
            "arn": "arn:aws:ec2:us-east-1:590184092117:elastic-ip/eipalloc-0096ceeef8520c570",
            "association_id": "eipassoc-07314a30e77204e70",
            "domain": "vpc",
            "id": "eipalloc-0096ceeef8520c570",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03a0194e0f849815b",
            "private_dns": "ip-10-31-1-37.ec2.internal",
            "private_ip": "10.31.1.37",
            "public_dns": "ec2-3-89-52-194.compute-1.amazonaws.com",
            "public_ip": "3.89.52.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0096ceeef8520c570",
            "association_id": "eipassoc-07314a30e77204e70",
            "connectivity_type": "public",
            "id": "nat-022e4f583c2d64ba1",
            "network_interface_id": "eni-03a0194e0f849815b",
            "private_ip": "10.31.1.37",
            "public_ip": "3.89.52.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c1845c3a6fb3ba8"
          },
          "dependencies": [
            "module.list_subnet.aws_subnet.public_1",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.natgw.aws_eip.my_eip",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:route-table/rtb-0b061a63c44083411",
            "id": "rtb-0b061a63c44083411",
            "owner_id": "590184092117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022e4f583c2d64ba1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.list_subnet.aws_subnet.public_1",
            "module.list_subnet.data.aws_availability_zones.zone",
            "module.natgw.aws_eip.my_eip",
            "module.natgw.aws_nat_gateway.my_natgw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_https_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:security-group/sg-0baceae751faebfc4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baceae751faebfc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "projet7-sg",
            "name_prefix": "",
            "owner_id": "590184092117",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_itgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:internet-gateway/igw-027763aee04054d74",
            "id": "igw-027763aee04054d74",
            "owner_id": "590184092117",
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:route-table/rtb-092cc5e098cfeddce",
            "id": "rtb-092cc5e098cfeddce",
            "owner_id": "590184092117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027763aee04054d74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bdc6dda189dedec5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_itgw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184092117:vpc/vpc-0bdc6dda189dedec5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.31.0.0/16",
            "default_network_acl_id": "acl-0bdade2dc7774a860",
            "default_route_table_id": "rtb-0dc70be516c848d39",
            "default_security_group_id": "sg-093802738a2a31152",
            "dhcp_options_id": "dopt-0ee22013c9e29614e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bdc6dda189dedec5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc70be516c848d39",
            "owner_id": "590184092117",
            "tags": {
              "Name": "mini-projet-vpc"
            },
            "tags_all": {
              "Name": "mini-projet-vpc"
            }
          }
        }
      ]
    }
  ]
}